2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.91

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.90

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* boot-druid.c, boot-settings.[ch]: replaced GnomeFileEntries with
	GtkFileChooserButtons

2005-01-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* boot-append-gui.c, boot-druid.c, boot-settings.c, callbacks.c:
	use new GtkMessageDialog API for HIG dialogs

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4.1

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4

2004-12-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.3

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* boot-image.c, boot-settings.c: only check for entry type with new
	entries, this makes it somewhat more secure when for some reason it
	can't get the partitions list. it's supposed to fix #155333, 
	#153700 and #152539

2004-09-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.0

2004-09-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 0.92

2004-08-20  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.91.0

2004-08-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* transfer.c: defaulted the timeout to 0 if it wasn't defined in the
	XML. Fixes #150244

2004-07-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-settings.c: fixed a strange crash when adding unknown type
	entries

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.90

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-druid.c, callbacks.c: specified the help sections

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>
