@@ -1,3 +1,7 @@
+2005-04-12  Stanislav Brabec  <sbrabec@suse.cz>
+
+	* address-list.c: fix a gcc 4.0 compile warning. Fixes #172932
+
 2005-04-11  Michael Vogt  <michael.vogt@ubuntu.com>
 
 	* connection.c, network-iface-isdn.c: make update_dns match
