@@ -1,3 +1,7 @@
+2005-04-12  Stanislav Brabec  <sbrabec@suse.cz>
+
+	* boot-settings.c: fix some gcc 4.0 compile warnings. Fixes #172932
+
 2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.2.0
